--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,10 @@ Current or previous core committers
 
 arteria GmbH
 
+Philippe O. Wagner (philippeowagner)
+Walter Renner (walterrenner)
+
+
 Contributors (in alphabetical order)
 
 * Your name could stand here :)
