Added @yannik-arteria to AUTHORS.

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,7 +4,7 @@ arteria GmbH
 
 Philippe O. Wagner (philippeowagner)
 Walter Renner (walterrenner)
-
+Yannik Ammann (yannik-arteria)
 
 Contributors (in alphabetical order)
 
